changed font sizes and links

--- a/The Complete 2021 Web Development Bootcamp/CSS/index.html
+++ b/The Complete 2021 Web Development Bootcamp/CSS/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="top-container">
         <h1>I'm Klinton.</h1>
-        <p>a programmer.</p>
+        <h2>a programmer.</h2>
         <img class="cloud1" src="images/cloud1.png" alt="cloud image">
         <img class="cloud2" src="images/cloud2.png" alt="cloud image">
         <img class="cloud2" src="images/cloud2.png" alt="cloud image">
@@ -43,16 +43,16 @@
           <h2>Get In Touch</h2>
           <h3>Lorem ipsum dolor sit amet, non elit.</h3>
           <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-          <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+          <a class="btn" href="mailto:klinton.jp@email.com">CONTACT ME</a>
         </div>
       </div>
       
       
       <div class="bottom-container">
-        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-        <a class="footer-link" href="https://twitter.com/">Twitter</a>
-        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-        <p>© 2018 Name Surname.</p>
+        <a class="footer-link" href="https://www.linkedin.com/in/klinton-smith/">LinkedIn</a>
+        <a class="footer-link" href="https://github.com/klinton24">GitHub</a>
+        <a class="footer-link" href="https://www.klintonsmith.com/">Website</a>
+        <p>© 2021 Klinton Smith.</p>
         <div>Icons made by <a href="https://www.flaticon.com/authors/monkik" title="monkik">monkik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
         <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
       </div>
