--- a/The Complete 2021 Web Development Bootcamp/CSS/index.html
+++ b/The Complete 2021 Web Development Bootcamp/CSS/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="top-container">
         <h1>I'm Klinton.</h1>
-        <h2>a programmer.</h2>
+        <h2 class="programmer-text">a programmer.</h2>
         <img class="cloud1" src="images/cloud1.png" alt="cloud image">
         <img class="cloud2" src="images/cloud2.png" alt="cloud image">
         <img class="cloud2" src="images/cloud2.png" alt="cloud image">
@@ -28,27 +28,25 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="" src="images/coding.png" alt="coding image">
+            <img class="skill-img code-img" src="images/coding.png" alt="coding image">
             <h3>Programming</h3>
             <p>I enjoy working with Javascript and React, while also having studied HTML5, CCS3, Java, Python, and SQL.</p>
           </div>
           <div class="skill-row">
-            <img class="" src="images/hot-sauce.png" alt="hot sauce image">
-            <h3>Hot Wings and Sauces</h3>
-            <p>I love trying out new sauces while eating chicken wings. I especially love red jalapeno, serrano, and habanero peppers.</p>
+            <img class="skill-img sauce-img" src="images/hot-sauce.png" alt="hot sauce image">
+            <h3 class="clear-left">Hot Wings and Sauces</h3>
+            <p>I love trying out new sauces while eating chicken wings. I especially love red jalapeno, serrano, and habanero peppers. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
         </div>
-        <hr>
+      </div>
+    </div>
+      <div class="bottom-container">
         <div class="contact-me">
           <h2>Get In Touch</h2>
           <h3>Lorem ipsum dolor sit amet, non elit.</h3>
           <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
           <a class="btn" href="mailto:klinton.jp@email.com">CONTACT ME</a>
-        </div>
-      </div>
-      
-      
-      <div class="bottom-container">
+        </div>    
         <a class="footer-link" href="https://www.linkedin.com/in/klinton-smith/">LinkedIn</a>
         <a class="footer-link" href="https://github.com/klinton24">GitHub</a>
         <a class="footer-link" href="https://www.klintonsmith.com/">Website</a>
