Finished styling and text of html

--- a/The Complete 2021 Web Development Bootcamp/CSS/index.html
+++ b/The Complete 2021 Web Development Bootcamp/CSS/index.html
@@ -35,24 +35,24 @@
           <div class="skill-row">
             <img class="skill-img sauce-img" src="images/hot-sauce.png" alt="hot sauce image">
             <h3 class="clear-left">Hot Wings and Sauces</h3>
-            <p>I love trying out new sauces while eating chicken wings. I especially love red jalapeno, serrano, and habanero peppers. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>I love trying out new sauces while eating chicken wings. I especially love red jalapeno, serrano, and habanero peppers. Some of my favorite sauces are Palo Alto Firefighters Pepper Sauce and Lucky Dog's Dia Del Perro. </p>
           </div>
         </div>
-      </div>
-    </div>
-      <div class="bottom-container">
-        <div class="contact-me">
+        <hr>
+        <div>
           <h2>Get In Touch</h2>
-          <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-          <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+          <h3>If you like talking about coding or hot sauce.. </h3>
+          <p class="contact-message">Care to chat about your favorite hot sauces or the projects you're working on? Lets chat!</p>
           <a class="btn" href="mailto:klinton.jp@email.com">CONTACT ME</a>
         </div>    
+    </div>
+    <div>
         <a class="footer-link" href="https://www.linkedin.com/in/klinton-smith/">LinkedIn</a>
         <a class="footer-link" href="https://github.com/klinton24">GitHub</a>
         <a class="footer-link" href="https://www.klintonsmith.com/">Website</a>
-        <p>© 2021 Klinton Smith.</p>
-        <div>Icons made by <a href="https://www.flaticon.com/authors/monkik" title="monkik">monkik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-        <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+        <div class="bottom-container">
+          <p>© 2021 Klinton Smith.</p>
+        <div class="made-by">Icons made by <a href="https://www.flaticon.com/authors/monkik" title="monkik">monkik</a> and <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
       </div>
       
     
