--- a/The Complete 2021 Web Development Bootcamp/BootStrap/TinDog/index.html
+++ b/The Complete 2021 Web Development Bootcamp/BootStrap/TinDog/index.html
@@ -3,24 +3,28 @@
   <head>
     <meta charset="utf-8" />
     <title>TinDog</title>
+    <!-- Bootstrap Scripts -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
       crossorigin="anonymous"
     />
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;900&family=Ubuntu:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/4495c4c9c6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
 
   <body>
     <section id="title">
       <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-warning">
           <a class="navbar-brand" href="#">TinDog</a>
           <button
             class="navbar-toggler"
@@ -54,8 +58,8 @@
         <div class="row">
           <div class="col-lg-6">
             <h1>Meet new and interesting dogs nearby.</h1>
-            <button type="button">Download</button>
-            <button type="button">Download</button>
+            <button type="button" class="btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</button>
+            <button type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
           </div>
           <div class="col-lg-6">
             <img src="images/iphone6.png" alt="iphone-mockup" />
