--- a/The Complete 2021 Web Development Bootcamp/BootStrap/TinDog/index.html
+++ b/The Complete 2021 Web Development Bootcamp/BootStrap/TinDog/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>TinDog</title>
+    <title>CaTinder</title>
     <!-- Bootstrap Scripts -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -17,7 +17,10 @@
       rel="stylesheet"
     />
     <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/4495c4c9c6.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/4495c4c9c6.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
 
@@ -25,7 +28,7 @@
     <section id="title">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-dark bg-warning">
-          <a class="navbar-brand" href="#">TinDog</a>
+          <a class="navbar-brand" href="#">CaTinder</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -57,12 +60,23 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <h1>Meet new and interesting dogs nearby.</h1>
-            <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
-            <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
+            <h1>Meet new and interesting cats nearby.</h1>
+            <button type="button" class="btn btn-dark btn-lg download-button">
+              <i class="fab fa-apple"></i> Download
+            </button>
+            <button
+              type="button"
+              class="btn btn-outline-light btn-lg download-button"
+            >
+              <i class="fab fa-google-play"></i> Download
+            </button>
           </div>
           <div class="col-lg-6">
-            <img class="title-image" src="images/iphone6.png" alt="iphone-mockup" />
+            <img
+              class="title-image"
+              src="images/iphone6.png"
+              alt="iphone-mockup"
+            />
           </div>
         </div>
       </div>
@@ -71,22 +85,31 @@
     <!-- Features -->
 
     <section id="features">
-      <h3>Easy to use.</h3>
-      <p>So easy to use, even your dog could do it.</p>
-
-      <h3>Elite Clientele</h3>
-      <p>We have all the dogs, the greatest dogs.</p>
-
-      <h3>Guaranteed to work.</h3>
-      <p>Find the love of your dog's life or your money back.</p>
+      <div class="row">
+        <div class="feature-box col-lg-4">
+          <i class="fas fa-check-circle"></i>
+          <h3>Easy to use.</h3>
+          <p>So easy to use, even your cat could do it.</p>
+        </div>
+        <div class="feature-box col-lg-4">
+          <i class="fas fa-cat"></i>
+          <h3>Elite Clientele</h3>
+          <p>We have all the cats, the greatest cats.</p>
+        </div>
+        <div class="feature-box col-lg-4">
+          <i class="fas fa-heart"></i>
+          <h3>Guaranteed to work.</h3>
+          <p>Find the love of your cas life or your money back.</p>
+        </div>
+      </div>
     </section>
 
     <!-- Testimonials -->
 
     <section id="testimonials">
       <h2>
-        I no longer have to sniff other dogs for love. I've found the hottest
-        Corgi on TinDog. Woof.
+        I no longer have to sniff other cats for love. I've found the hottest
+        Corgi on CaTinder. Woof.
       </h2>
       <img src="images/dog-img.jpg" alt="dog-profile" />
       <em>Pebbles, New York</em>
@@ -108,8 +131,8 @@
     <!-- Pricing -->
 
     <section id="pricing">
-      <h2>A Plan for Every Dog's Needs</h2>
-      <p>Simple and affordable price plans for your and your dog.</p>
+      <h2>A Plan for Every Cat's Needs</h2>
+      <p>Simple and affordable price plans for your and your cat.</p>
 
       <h3>Chihuahua</h3>
       <h2>Free</h2>
@@ -137,7 +160,7 @@
     <!-- Call to Action -->
 
     <section id="cta">
-      <h3>Find the True Love of Your Dog's Life Today.</h3>
+      <h3>Find the True Love of Your Cat's Life Today.</h3>
       <button type="button">Download</button>
       <button type="button">Download</button>
     </section>
@@ -145,7 +168,7 @@
     <!-- Footer -->
 
     <footer id="footer">
-      <p>© Copyright 2018 TinDog</p>
+      <p>© Copyright 2021 CaTinder</p>
     </footer>
 
     <script
