updated images, and fixed spelling errors

--- a/The Complete 2021 Web Development Bootcamp/BootStrap/TinDog/index.html
+++ b/The Complete 2021 Web Development Bootcamp/BootStrap/TinDog/index.html
@@ -74,7 +74,7 @@
           <div class="col-lg-6">
             <img
               class="title-image"
-              src="images/iphone6.png"
+              src="images/catPhone.png"
               alt="iphone-mockup"
             />
           </div>
@@ -99,7 +99,7 @@
         <div class="feature-box col-lg-4">
           <i class="fas fa-heart"></i>
           <h3>Guaranteed to work.</h3>
-          <p>Find the love of your cas life or your money back.</p>
+          <p>Find the love of your cat life or your money back.</p>
         </div>
       </div>
     </section>
@@ -109,10 +109,10 @@
     <section id="testimonials">
       <h2>
         I no longer have to sniff other cats for love. I've found the hottest
-        Corgi on CaTinder. Woof.
+        Silver Tabby on CaTinder. Meow!
       </h2>
-      <img src="images/dog-img.jpg" alt="dog-profile" />
-      <em>Pebbles, New York</em>
+      <img src="images/cat-img.png" alt="cat-profile" />
+      <em>Momo, New York</em>
 
       <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
     <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
@@ -134,23 +134,23 @@
       <h2>A Plan for Every Cat's Needs</h2>
       <p>Simple and affordable price plans for your and your cat.</p>
 
-      <h3>Chihuahua</h3>
+      <h3>American Shorthair</h3>
       <h2>Free</h2>
       <p>5 Matches Per Day</p>
       <p>10 Messages Per Day</p>
       <p>Unlimited App Usage</p>
       <button type="button">Sign Up</button>
 
-      <h3>Labrador</h3>
+      <h3>Persian</h3>
       <h2>$49 / mo</h2>
       <p>Unlimited Matches</p>
       <p>Unlimited Messages</p>
       <p>Unlimited App Usage</p>
       <button type="button">Sign Up</button>
 
-      <h3>Mastiff</h3>
+      <h3>Siamese</h3>
       <h2>$99 / mo</h2>
-      <p>Pirority Listing</p>
+      <p>Priority Listing</p>
       <p>Unlimited Matches</p>
       <p>Unlimited Messages</p>
       <p>Unlimited App Usage</p>
