--- a/The Complete 2021 Web Development Bootcamp/BootStrap/TinDog/index.html
+++ b/The Complete 2021 Web Development Bootcamp/BootStrap/TinDog/index.html
@@ -87,17 +87,17 @@
     <section id="features">
       <div class="row">
         <div class="feature-box col-lg-4">
-          <i class="fas fa-check-circle"></i>
+          <i class="fas fa-check-circle fa-4x"></i>
           <h3>Easy to use.</h3>
           <p>So easy to use, even your cat could do it.</p>
         </div>
         <div class="feature-box col-lg-4">
-          <i class="fas fa-cat"></i>
+          <i class="fas fa-cat fa-4x"></i>
           <h3>Elite Clientele</h3>
           <p>We have all the cats, the greatest cats.</p>
         </div>
         <div class="feature-box col-lg-4">
-          <i class="fas fa-heart"></i>
+          <i class="fas fa-heart fa-4x"></i>
           <h3>Guaranteed to work.</h3>
           <p>Find the love of your cat life or your money back.</p>
         </div>
@@ -111,7 +111,7 @@
         I no longer have to sniff other cats for love. I've found the hottest
         Silver Tabby on CaTinder. Meow!
       </h2>
-      <img src="images/cat-img.png" alt="cat-profile" />
+      <img class="testimonial-image" src="images/cat-img.png" alt="cat-profile" />
       <em>Momo, New York</em>
 
       <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
@@ -122,10 +122,10 @@
     <!-- Press -->
 
     <section id="press">
-      <img src="images/techcrunch.png" alt="tc-logo" />
-      <img src="images/tnw.png" alt="tnw-logo" />
-      <img src="images/bizinsider.png" alt="biz-insider-logo" />
-      <img src="images/mashable.png" alt="mashable-logo" />
+      <img class="press-logo" src="images/techcrunch.png" alt="tc-logo" />
+      <img class="press-logo" src="images/tnw.png" alt="tnw-logo" />
+      <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo" />
+      <img class="press-logo" src="images/mashable.png" alt="mashable-logo" />
     </section>
 
     <!-- Pricing -->
