created carousel for testimonials

--- a/The Complete 2021 Web Development Bootcamp/BootStrap/TinDog/index.html
+++ b/The Complete 2021 Web Development Bootcamp/BootStrap/TinDog/index.html
@@ -107,16 +107,56 @@
     <!-- Testimonials -->
 
     <section id="testimonials">
-      <h2>
-        I no longer have to sniff other cats for love. I've found the hottest
-        Silver Tabby on CaTinder. Meow!
-      </h2>
-      <img class="testimonial-image" src="images/cat-img.png" alt="cat-profile" />
-      <em>Momo, New York</em>
-
-      <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
+      <div
+        id="testimonialCarousel"
+        class="carousel slide"
+        data-bs-slide="false"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <h2>
+              I no longer have to sniff other cats for love. I've found the
+              hottest Silver Tabby on CaTinder. Meow!
+            </h2>
+            <img
+              class="testimonial-image"
+              src="images/cat-img.png"
+              alt="cat-profile"
+            />
+            <em>Momo, New York</em>
+          </div>
+          <div class="carousel-item">
+            <h2 class="testimonial-text">
+              My cat used to be so lonely, but with CaTinder's help, they've found
+              the love of their life. I think. Thanks CaTinder!
+            </h2>
+            <img
+              class="testimonial-image"
+              src="images/consumer-img.png"
+              alt="consumer profile"
+            />
+            <em>Haruto, Utah</em>
+          </div>
+        </div>
+        <a
+          class="carousel-control-prev"
+          href="#testimonialCarousel"
+          role="button"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </a>
+        <a
+          class="carousel-control-next"
+          href="#testimonialCarousel"
+          role="button"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </a>
+      </div>
     </section>
 
     <!-- Press -->
@@ -124,7 +164,11 @@
     <section id="press">
       <img class="press-logo" src="images/techcrunch.png" alt="tc-logo" />
       <img class="press-logo" src="images/tnw.png" alt="tnw-logo" />
-      <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo" />
+      <img
+        class="press-logo"
+        src="images/bizinsider.png"
+        alt="biz-insider-logo"
+      />
       <img class="press-logo" src="images/mashable.png" alt="mashable-logo" />
     </section>
 
