--- a/The Complete 2021 Web Development Bootcamp/BootStrap Project/CaTinder/index.html
+++ b/The Complete 2021 Web Development Bootcamp/BootStrap Project/CaTinder/index.html
@@ -22,6 +22,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" href="images/favicon.ico">
   </head>
 
   <body>
