--- a/The Complete 2021 Web Development Bootcamp/BootStrap Project/CaTinder/index.html
+++ b/The Complete 2021 Web Development Bootcamp/BootStrap Project/CaTinder/index.html
@@ -22,7 +22,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="icon" href="images/favicon.ico" />
   </head>
 
   <body>
@@ -128,8 +128,8 @@
           </div>
           <div class="carousel-item">
             <h2 class="testimonial-text">
-              My cat used to be so lonely, but with CaTinder's help, they've found
-              the love of their life. I think. Thanks CaTinder!
+              My cat used to be so lonely, but with CaTinder's help, they've
+              found the love of their life. I think. Thanks CaTinder!
             </h2>
             <img
               class="testimonial-image"
@@ -176,30 +176,59 @@
     <!-- Pricing -->
 
     <section id="pricing">
-      <h2>A Plan for Every Cat's Needs</h2>
-      <p>Simple and affordable price plans for your and your cat.</p>
-
-      <h3>American Shorthair</h3>
-      <h2>Free</h2>
-      <p>5 Matches Per Day</p>
-      <p>10 Messages Per Day</p>
-      <p>Unlimited App Usage</p>
-      <button type="button">Sign Up</button>
-
-      <h3>Persian</h3>
-      <h2>$49 / mo</h2>
-      <p>Unlimited Matches</p>
-      <p>Unlimited Messages</p>
-      <p>Unlimited App Usage</p>
-      <button type="button">Sign Up</button>
-
-      <h3>Siamese</h3>
-      <h2>$99 / mo</h2>
-      <p>Priority Listing</p>
-      <p>Unlimited Matches</p>
-      <p>Unlimited Messages</p>
-      <p>Unlimited App Usage</p>
-      <button type="button">Sign Up</button>
+      <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+        <h2>A Plan for Every Cat's Needs</h2>
+        <p>Simple and affordable price plans for your and your cat.</p>
+      </div>
+      <div class="d-flex justify-content-around"">
+        <div class="card-deck mb-3 text-center">
+          <div class="row">
+          <div class="card mb-4 box-shadow price-card">
+            <div class="card-header">
+              <h3>Ragdoll</h3>
+            </div>
+            <div class="card-body">
+              <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
+              <ul class="list-unstyled mt-3 mb-4">
+                <li>5 Matches Per Day</li>
+                <li>10 Messages Per Day</li>
+                <li>Unlimited App Usage</li>
+                <li>Monthly Newsletter</li>
+              </ul>
+              <button type="button" class="btn btn-lg btn-block btn-block btn-warning">Sign up for free</button>
+            </div>
+          </div>
+          <div class="card mb-4 box-shadow price-card">
+            <div class="card-header">
+              <h3>Persian</h3>
+            </div>
+            <div class="card-body d-flex flex-column">
+              <h1 class="card-title pricing-card-title">$15 <small class="text-muted">/ mo</small></h1>
+              <ul class="list-unstyled mt-3 mb-4">
+                <li>Unlimited Matches Per Day</li>
+                <li>Unlimited Messages Per Day</li>
+                <li>Unlimited App Usage</li>
+              </ul>
+              <button type="button" class="align-self-bottom btn btn-lg btn-block btn-warning" style="margin-top: auto;">Get started</button>
+            </div>
+          </div>
+          <div class="card mb-4 box-shadow price-card">
+            <div class="card-header">
+              <h3>Siamese</h3>
+            </div>
+            <div class="card-body">
+              <h1 class="card-title pricing-card-title">$29 <small class="text-muted">/ mo</small></h1>
+              <ul class="list-unstyled mt-3 mb-4">
+                <li>Priority Listings</li>
+                <li>Unlimited Matches Per Day</li>
+                <li>Unlimited Messages Per Day</li>
+                <li>Unlimited App Usage</li>
+              </ul>
+              <button type="button" class="btn btn-lg btn-block btn-warning">Contact us</button>
+            </div>
+          </div>
+        </div>
+        </div>  
     </section>
 
     <!-- Call to Action -->
