styled footer and call to action

--- a/The Complete 2021 Web Development Bootcamp/BootStrap Project/CaTinder/index.html
+++ b/The Complete 2021 Web Development Bootcamp/BootStrap Project/CaTinder/index.html
@@ -235,14 +235,25 @@
 
     <section id="cta">
       <h3>Find the True Love of Your Cat's Life Today.</h3>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
+      <button type="button" class="btn btn-dark btn-lg download-button">
+        <i class="fab fa-apple"></i> Download
+      </button>
+      <button
+        type="button"
+        class="btn btn-dark btn-lg download-button"
+      >
+        <i class="fab fa-google-play"></i> Download
+      </button>
     </section>
 
     <!-- Footer -->
 
     <footer id="footer">
-      <p>© Copyright 2021 CaTinder</p>
+        <i class="social-icon fab fa-twitter"></i>
+        <i class="social-icon fab fa-facebook-f"></i>
+        <i class="social-icon fab fa-instagram"></i>
+        <i class="social-icon fas fa-envelope"></i>
+        <p>© Copyright 2021 CaTinder</p>
     </footer>
 
     <script
