--- a/The Complete 2021 Web Development Bootcamp/BootStrap Project/CaTinder/index.html
+++ b/The Complete 2021 Web Development Bootcamp/BootStrap Project/CaTinder/index.html
@@ -45,13 +45,13 @@
           <div class="collapse navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" href="">Contact</a>
+                <a class="nav-link" href="#footer">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Pricing</a>
+                <a class="nav-link" href="#pricing">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Download</a>
+                <a class="nav-link" href="#cta">Download</a>
               </li>
             </ul>
           </div>
@@ -61,7 +61,7 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <h1>Meet new and interesting cats nearby.</h1>
+            <h1 class="big-heading">Meet new and interesting cats nearby.</h1>
             <button type="button" class="btn btn-dark btn-lg download-button">
               <i class="fab fa-apple"></i> Download
             </button>
@@ -181,21 +181,28 @@
         <p>Simple and affordable price plans for your and your cat.</p>
       </div>
       <div class="d-flex justify-content-around"">
-        <div class="card-deck mb-3 text-center">
-          <div class="row">
+      <div class="card-deck mb-3 text-center">
+        <div class="row">
           <div class="card mb-4 box-shadow price-card">
             <div class="card-header">
               <h3>Ragdoll</h3>
             </div>
             <div class="card-body">
-              <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
+              <h1 class="card-title pricing-card-title">
+                $0 <small class="text-muted">/ mo</small>
+              </h1>
               <ul class="list-unstyled mt-3 mb-4">
                 <li>5 Matches Per Day</li>
                 <li>10 Messages Per Day</li>
                 <li>Unlimited App Usage</li>
                 <li>Monthly Newsletter</li>
               </ul>
-              <button type="button" class="btn btn-lg btn-block btn-block btn-warning">Sign up for free</button>
+              <button
+                type="button"
+                class="btn btn-lg btn-block btn-block btn-warning"
+              >
+                Sign up for free
+              </button>
             </div>
           </div>
           <div class="card mb-4 box-shadow price-card">
@@ -203,13 +210,21 @@
               <h3>Persian</h3>
             </div>
             <div class="card-body d-flex flex-column">
-              <h1 class="card-title pricing-card-title">$15 <small class="text-muted">/ mo</small></h1>
+              <h1 class="card-title pricing-card-title">
+                $15 <small class="text-muted">/ mo</small>
+              </h1>
               <ul class="list-unstyled mt-3 mb-4">
                 <li>Unlimited Matches Per Day</li>
                 <li>Unlimited Messages Per Day</li>
                 <li>Unlimited App Usage</li>
               </ul>
-              <button type="button" class="align-self-bottom btn btn-lg btn-block btn-warning" style="margin-top: auto;">Get started</button>
+              <button
+                type="button"
+                class="align-self-bottom btn btn-lg btn-block btn-warning"
+                style="margin-top: auto"
+              >
+                Get started
+              </button>
             </div>
           </div>
           <div class="card mb-4 box-shadow price-card">
@@ -217,18 +232,22 @@
               <h3>Siamese</h3>
             </div>
             <div class="card-body">
-              <h1 class="card-title pricing-card-title">$29 <small class="text-muted">/ mo</small></h1>
+              <h1 class="card-title pricing-card-title">
+                $29 <small class="text-muted">/ mo</small>
+              </h1>
               <ul class="list-unstyled mt-3 mb-4">
                 <li>Priority Listings</li>
                 <li>Unlimited Matches Per Day</li>
                 <li>Unlimited Messages Per Day</li>
                 <li>Unlimited App Usage</li>
               </ul>
-              <button type="button" class="btn btn-lg btn-block btn-warning">Contact us</button>
+              <button type="button" class="btn btn-lg btn-block btn-warning">
+                Contact us
+              </button>
             </div>
           </div>
         </div>
-        </div>  
+      </div>
     </section>
 
     <!-- Call to Action -->
@@ -238,10 +257,7 @@
       <button type="button" class="btn btn-dark btn-lg download-button">
         <i class="fab fa-apple"></i> Download
       </button>
-      <button
-        type="button"
-        class="btn btn-dark btn-lg download-button"
-      >
+      <button type="button" class="btn btn-light btn-lg download-button">
         <i class="fab fa-google-play"></i> Download
       </button>
     </section>
@@ -249,11 +265,11 @@
     <!-- Footer -->
 
     <footer id="footer">
-        <i class="social-icon fab fa-twitter"></i>
-        <i class="social-icon fab fa-facebook-f"></i>
-        <i class="social-icon fab fa-instagram"></i>
-        <i class="social-icon fas fa-envelope"></i>
-        <p>© Copyright 2021 CaTinder</p>
+      <i class="social-icon fab fa-twitter"></i>
+      <i class="social-icon fab fa-facebook-f"></i>
+      <i class="social-icon fab fa-instagram"></i>
+      <i class="social-icon fas fa-envelope"></i>
+      <p>© Copyright 2021 CaTinder</p>
     </footer>
 
     <script
