refactor css and html

--- a/The Complete 2021 Web Development Bootcamp/BootStrap Project/CaTinder/index.html
+++ b/The Complete 2021 Web Development Bootcamp/BootStrap Project/CaTinder/index.html
@@ -26,7 +26,7 @@
   </head>
 
   <body>
-    <section id="title">
+    <section id="title" class="colored-section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-dark bg-warning">
           <a class="navbar-brand" href="#">CaTinder</a>
@@ -85,7 +85,7 @@
 
     <!-- Features -->
 
-    <section id="features">
+    <section id="features" class="white-section">
       <div class="row">
         <div class="feature-box col-lg-4">
           <i class="fas fa-check-circle fa-4x"></i>
@@ -107,7 +107,7 @@
 
     <!-- Testimonials -->
 
-    <section id="testimonials">
+    <section id="testimonials" class="colored-section">
       <div
         id="testimonialCarousel"
         class="carousel slide"
@@ -115,7 +115,7 @@
       >
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <h2>
+            <h2 class="section-heading">
               I no longer have to sniff other cats for love. I've found the
               hottest Silver Tabby on CaTinder. Meow!
             </h2>
@@ -162,7 +162,7 @@
 
     <!-- Press -->
 
-    <section id="press">
+    <section id="press" class="colored-section">
       <img class="press-logo" src="images/techcrunch.png" alt="tc-logo" />
       <img class="press-logo" src="images/tnw.png" alt="tnw-logo" />
       <img
@@ -175,9 +175,9 @@
 
     <!-- Pricing -->
 
-    <section id="pricing">
+    <section id="pricing" class="white-section">
       <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-        <h2>A Plan for Every Cat's Needs</h2>
+        <h2 class="section-heading">A Plan for Every Cat's Needs</h2>
         <p>Simple and affordable price plans for your and your cat.</p>
       </div>
       <div class="d-flex justify-content-around"">
@@ -252,7 +252,7 @@
 
     <!-- Call to Action -->
 
-    <section id="cta">
+    <section id="cta" class="colored-section">
       <h3>Find the True Love of Your Cat's Life Today.</h3>
       <button type="button" class="btn btn-dark btn-lg download-button">
         <i class="fab fa-apple"></i> Download
@@ -264,7 +264,7 @@
 
     <!-- Footer -->
 
-    <footer id="footer">
+    <footer id="footer" class="white-section">
       <i class="social-icon fab fa-twitter"></i>
       <i class="social-icon fab fa-facebook-f"></i>
       <i class="social-icon fab fa-instagram"></i>
