added sound on click events

--- a/The Complete 2021 Web Development Bootcamp/Javascript & DOM/Drum Kit/index.html
+++ b/The Complete 2021 Web Development Bootcamp/Javascript & DOM/Drum Kit/index.html
@@ -10,17 +10,16 @@
   <h1 id="title">Drum 🥁 Kit</h1>
   </header>
   <div class="set">
-    <button class="a drum">a</button>
-    <button class="s drum">s</button>
-    <button class="d drum">d</button>
-    <button class="f drum">f</button>
-    <button class="g drum">g</button>
-    <button class="h drum">h</button>
-    <button class="j drum">j</button>
-    <button class="k drum">k</button>
-    <button class="l drum">l</button>
+    <button class="a drum">a<span>clap</span></button>
+    <button class="s drum">s<span>hi hat</span></button>
+    <button class="d drum">d<span>kick</span></button>
+    <button class="f drum">f<span>open hat</span></button>
+    <button class="g drum">g<span>boom</span></button>
+    <button class="h drum">h<span>ride</span></button>
+    <button class="j drum">j<span>snare</span></button>
+    <button class="k drum">k<span>tom</span></button>
+    <button class="l drum">l<span>tink</span></button>
   </div>
-
-
+  <script src="index.js"></script>
 </body>
 </html>
