--- a/The Complete 2021 Web Development Bootcamp/jQuery/index.html
+++ b/The Complete 2021 Web Development Bootcamp/jQuery/index.html
@@ -14,6 +14,9 @@
     <button>Click Me</button>
     <button>Click Me</button>
     <button>Click Me</button>
+    <br>
+    <a>Google</a>
+    <input type="text" value="">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="index.js"></script>
