add try again button to failure page

--- a/The Complete 2021 Web Development Bootcamp/Application Programming Interfaces/Newsletter Signup/failure.html
+++ b/The Complete 2021 Web Development Bootcamp/Application Programming Interfaces/Newsletter Signup/failure.html
@@ -16,6 +16,9 @@
         <div class="container">
           <h1 class="display-4">Oh no!</h1>
           <p class="lead">Something seems to have gone wronng. Please try again later!</p>
+          <form action="/failure" method="post">
+            <button type="submit" class="btn btn-warning btn-lg">Try Again!</button>
+          </form>
         </div>
       </div>
 </html>
